# michael960-lib

./: README.md  README.txt  setup.cfg
src/michael960_lib.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/michael960lib/: common.py  dataman.py  essentials.py
src/michael960lib/double_well/: .solver.py.swp  instances.py  multi_param.py  solver.py  two_param.py
src/michael960lib/file_util/: data.py  path.py  remote.py
src/michael960lib/hard_sphere/: dummy.py  solver.py
src/michael960lib/lattice/: structure.py  utility.py
src/michael960lib/math/: .ode.py.swo  .ode.py.swp  fitting.py  fourier.py  integration.py
src/michael960lib/plotting/: plot_helper.py
src/michael960lib/remote/: .grile_interface.py.swp  data_manager.py  grile_interface.py  logging.py  remote.py
