[metadata]
name = michael960-lib 
version = 0.0.1
author = Michael Wang
author_email = mike.wang96029@gmail.com
description = base library for other packages by michael
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/michael-960/michael960-lib
project_urls = 
    Bug Tracker = https://github.com/michael-960/michael960-lib/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =


[options.packages.find]
where = src

